--- a/app/src/main/res/menu/option.xml
+++ b/app/src/main/res/menu/option.xml
@@ -6,4 +6,7 @@
     <item
         android:id="@+id/import_from_clip_board"
         android:title="Import From Clipboard"/>
+    <item
+        android:id="@+id/notification_setting"
+        android:title="Notification Permission Setting"/>
 </menu>
